<resources>
    <string name="loading">正在加载</string>
    <string name="SmsAntiLost">短信防丢器</string>
    <string name="app_name">短信防丢器</string>
    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="goSetting">前往设置</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="longin">登陆</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="phoneNumber">手机号码</string>
    <string name="pleaseInputPwd">请输入账号密码</string>
    <string name="registerUser">注册用户</string>
    <string name="codeLogin">验证码登陆</string>
    <string name="networkError">网络错误</string>
    <string name="EnterNumber">请输入账号</string>
    <string name="enterPwd">请输入密码</string>
    <string name="enterCode">请输入验证码 </string>
    <string name="exitNext">再按一次退出程序</string>
    <string name="natilost">防丢</string>
    <string name="location">定位</string>
    <string name="more">更多</string>
    <string name="comtactList">通讯录</string>
    <string name="concert">确定</string>
    <string name="search">搜索</string>
    <string name="contactDetails">联系人详情</string>
    <string name="edit">编辑</string>
    <string name="complete">完成</string>
    <string name="editSucceed">编辑成功</string>
    <string name="add">添加</string>
    <string name="addDivece">添加设备</string>
    <string name="addFriends">添加好友</string>
    <string name="scanning">扫一扫</string>
    <string name="searchComplete">搜索完成</string>
    <string name="searching">搜索中…</string>
    <string name="binding">绑定中，请稍后…</string>
    <string name="reSearching">重新搜索</string>
    <string name="key">钥匙</string>
    <string name="wallet">钱包</string>
    <string name="noteBook">笔记本</string>
    <string name="secondCard">手机副卡</string>
    <string name="other">其他</string>
    <string name="notRegist">该手机号码未注册</string>
    <string name="notEffect">无效手机号码</string>
    <string name="reInput">重新输入</string>
    <string name="back">返回</string>
    <string name="inputOtherPhone">请输入对方的手机号码</string>
    <string name="inviteFriendsDownLoad">邀请家人朋友下载</string>
    <string name="simInsert">SIM卡位插入</string>
    <string name="downRefresh">下拉刷新</string>
    <string name="belling">响铃</string>
    <string name="simCard">SIM卡</string>
    <string name="notInsert">未插入</string>
    <string name="cutRemindSound">断开提醒声音</string>
    <string name="defaultSound">默认</string>
    <string name="sweetSound">悦耳</string>
    <string name="sharpSound">尖锐</string>
    <string name="alarmSound">报警</string>
    <string name="TranundaryReminding">越界提醒设置</string>
    <string name="disconnectedSound">断开时，手机提醒声音</string>
    <string name="disconnectedTime">断开时，手机提醒时长</string>
    <string name="disconnectSoundAndTime">设备与手机断开时，手机的“响铃”和“提醒时长”</string>
    <string name="connectedSound">手机与设备重新连接时，手机提醒</string>
    <string name="ModifyName">修改名称</string>
    <string name="CanSave">可以保存</string>
    <string name="ChangeRights">转移权限</string>
    <string name="ChoiceUserChange">请选择转移权限的用户（需要先添加好友，才能转移权限）</string>
    <string name="SIMNumberSetting">SIM卡号码设置</string>
    <string name="BindingLogic">解绑逻辑</string>
    <string name="UnbindingSure">确定解除设备绑定吗？</string>
    <string name="UnbindingAndLost">解除绑定后，你将无法操作该设备</string>
    <string name="outBoundsSetting">越界模式设置</string>
    <string name="RemindOutBoundsSetting">越界提醒设置</string>
    <string name="findModeSetting">寻物模式设置</string>
    <string name="Bi_directionalAntiLoss">双向防丢</string>
    <string name="turnOn">开</string>
    <string name="otherSetting">其他设置</string>
    <string name="changeName">修改名称</string>
    <string name="Unbinding">解除绑定</string>
    <string name="twoWayTurnOn">开启后，可让设备通过“双击”功能按键，来让手机响铃。</string>
    <string name="phoneRemindSound">手机提醒声音</string>
    <string name="RemindTime">手机提醒时长</string>
    <string name="soundAndVibration">声音与震动</string>
    <string name="small">小</string>
    <string name="big">大</string>
    <string name="vibration">震动</string>
    <string name="inputCode">请输入验证码</string>
    <string name="getMsmCode">获取验证码</string>
    <string name="phoneLogin">账号登陆</string>
    <string name="ReWantMsmCode">重新获取</string>
    <string name="NetError">网络错误</string>
    <string name="inputRightNumber">请输入正确的手机号码</string>
    <string name="inputRightMsmCode">请输入的短信验证码</string>
    <string name="msmCodeError">验证码错误</string>
    <string name="inputPhoneNumber">请输入手机号码</string>
    <string name="inputPhoneNumber1">请输入新手机号码</string>
    <string name="nextStep">下一步</string>
    <string name="settingPwd">请设置密码</string>
    <string name="settingPwdNext">再次确认密码</string>
    <string name="enterPwdNext">请再次输入密码</string>
    <string name="enterSamePwd">请输入两次相同的密码</string>
    <string name="name">名称</string>
    <string name="beginTime">开始时间</string>
    <string name="endTime">结束时间</string>
    <string name="repeat">重复</string>
    <string name="everyDay">每天</string>
    <string name="addSleepTime">添加休眠时段</string>
    <string name="infoIsEmpty">信息没填完整</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="end">结束</string>
    <string name="antiDisturb">防打扰区域</string>
    <string name="simShowContact">显示SIM卡的联系人</string>
    <string name="openAnti">开启后，勿扰区域内，将关闭所有防丢提醒</string>
    <string name="radiusSetting">半径设置：当前半径1m</string>
    <string name="settingM">半径设置：当前半径</string>
    <string name="changePhone">修改手机号码</string>
    <string name="inputNewPhone">输入新手机号码</string>
    <string name="settingNotes">设置备注</string>
    <string name="deleteFriends">删除好友</string>
    <string name="inputFriendsNotes">请输入好友备注</string>
    <string name="editGoodsFriends">编辑好友</string>
    <string name="nickname">昵称:</string>
    <string name="myFiends">我的好友</string>
    <string name="newFriends">新的好友</string>
    <string name="notNewsFriends">暂无新好友</string>
    <string name="sunDay">星期日</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="choiceRepeatDate">请选择重复日期</string>
    <string name="week">周末</string>
    <string name="workDate">工作日</string>
    <string name="changePwd">修改密码</string>
    <string name="changeSucceed">修改成功</string>
    <string name="pwdNotSame">密码不一致</string>
    <string name="inputNewPwd">输入新密码</string>
    <string name="msmCode">短信验证码</string>
    <string name="reGetTime">42S重新获取</string>
    <string name="sleepTimeName">休眠时段名称</string>
    <string name="inputSleepTimeName">请输入休眠时段名称</string>
    <string name="save">保存</string>
    <string name="editUserName">编辑用户名称</string>
    <string name="saveSucceed">保存成功</string>
    <string name="sleepTime">休眠时段</string>
    <string name="accountSetting">账号设置</string>
    <string name="exitLogin">是否确定退出登录？</string>
    <string name="myIcon">我的头像</string>
    <string name="userName">用户名称</string>
    <string name="binddingPhone">手机绑定</string>
    <string name="phoneBinding">未绑定</string>
    <string name="wetchatBinding">微信绑定</string>
    <string name="exit">退出登录</string>
    <string name="hadConnect">已连接</string>
    <string name="disConnect">未连接</string>
    <string name="nearBy">距离近</string>
    <string name="now">刚刚</string>
    <string name="company">公司</string>
    <string name="delete">删除</string>
    <string name="inputName">请输入名字</string>
    <string name="inputPhone">请输入手机号码</string>
    <string name="sendSms">发送信息</string>
    <string name="addPhone">添加电话</string>
    <string name="deviceName">设备名字</string>
    <string name="inputSearchInfo">请输入搜索信息</string>
    <string name="NoonBreak">午休</string>
    <string name="computor">笔记本</string>
    <string name="aboutMe">关于我们</string>
    <string name="emptySms">暂无短信</string>
    <string name="scanningSucceed">扫描成功</string>
    <string name="contactSum">当前通讯录有</string>
    <string name="moreSetting">设置</string>
    <string name="MultilingualLanguage">多国语言</string>
    <string name="china">简体中文</string>
    <string name="hk">繁體中文</string>
    <string name="english">English</string>
    <string name="settingSuscceed">设置成功</string>
    <string name="sms">短信</string>
    <string name="currentArea">佛山</string>
    <string name="searchResult">搜索结果</string>
    <string name="settingAntiAreaName">防打扰区域名称设置</string>
    <string name="pleaseInputName">请输入区域名称</string>
    <string name="openBlueTooth">请打开蓝牙</string>
    <string name="disName">未命名</string>
    <string name="connectSucceed">连接成功</string>
    <string name="connectFail">连接失败</string>
    <string name="deviceNoConnect">设备未连接</string>
    <string name="simNoInsert">SIM卡未插入</string>
    <string name="deviceHasAdd">该设备已添加</string>
    <string name="pleaseConnect">请连接防丢器</string>
    <string name="addAntiLostArea">添加防打扰区域</string>
    <string name="connectedAlert">重连提醒</string>
    <string name="deleteAntititle">是否删除该区域</string>
    <string name="comfir">确认</string>
    <string name="aeraRadius">请设置区域半径</string>
    <string name="locationRecord">位置记录</string>
    <string name="locationGuide">导航</string>
    <string name="antiArea">勿扰区域</string>
    <string name="deviceDeveloping">功能开发中...</string>
    <string name="newSms">新信息</string>
    <string name="simHadInsert">已插入</string>
    <string name="pleaseChangeInputName">请输入修改的名称</string>
    <string name="unbindSucceed">解除绑定成功</string>
    <string name="hadBind">已绑定</string>
    <string name="hadNotBind">未绑定</string>
    <string name="farAway">距离近</string>
    <string name="moveManager">确定转移管理员吗？</string>
    <string name="setUnBind">确定解除设备绑定吗？</string>
    <string name="unbindContent">解除绑定后，你将无法操作该设备？</string>
    <string name="moveManagerDetails">转移管理员后，您将成为普通用户，失</string>
    <string name="moveManagerDetails2">转移管理员后，您将成为普通用户，失去该设备的管理员权限</string>
    <string name="takePhotos">拍照</string>
    <string name="pictures">从手机相册选择</string>
    <string name="systemMap">系统自带地图导航</string>
    <string name="aMaps">高德地图导航</string>
    <string name="baiduMap">百度地图导航</string>
    <string name="pleaseChoiceDevice">请选择设备</string>
    <string name="aMapIsNotVail">您尚未安装高德地图或地图版本过低</string>
    <string name="baiduMapIsNotVail">您尚未安装高德地图或地图版本过低</string>
    <string name="otherPhoneNumber">请输入对方手机号码</string>
    <string name="inviteFriends">邀请家人朋友下载</string>
    <string name="shareApp">分享APP</string>
    <string name="send">发送</string>
    <string name="createContact">新建联系人</string>
    <string name="servicePhone">客服电话</string>
    <string name="ifCall">是否呼叫</string>
    <string name="call">呼叫</string>
    <string name="receiveNewSms">接收新消息提醒</string>
    <string name="myLocation">我的定位</string>
    <string name="pleaseInputUserName">请输入用户名</string>
    <string name="mes">消息</string>
    <string name="SystemAlert">系统通知</string>
    <string name="receive">收件人:</string>
    <string name="known">知道了</string>
    <string name="cutOffConnect">断开连接</string>
    <string name="cutOffConnect1">已断开连接</string>
    <string name="SignUp">注册账号</string>
    <string name="RegistrationSuccess">注册成功</string>
    <string name="registNext">正在跳转登录页...</string>
    <string name="goLogin">去登陆</string>
    <string name="iknown">知道了</string>
    <string name="enterAgain">重新输入</string>
    <string name="InvalidMobileNumber">无效手机号码</string>
    <string name="ReadAll">标志为已读</string>
    <string name="SMSManager">短信管理</string>
    <string name="newSmsText">短信</string>
    <string name="SilentPeriod">休眠时段</string>
    <string name="AntiLossNotifications">开启后，休眠时段内，将关闭所有防丢提醒</string>
    <string name="AddSilentPeriod">添加休眠时段</string>
</resources>