<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundGray"
    tools:context="com.goockr.smsantilost.views.activities.antilost.SettingActivity">

    <!--越界模式设置-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:text="@string/outBoundsSetting"
        android:paddingLeft="@dimen/x12"
        android:textSize="12sp"
        android:gravity="center_vertical"
        android:textColor="@color/textTitleColor"/>

    <!--越界提醒设置-->
    <LinearLayout
        android:id="@+id/ll_SetIndexOut"
        style="@style/setting_ll_style">

        <ImageView
            android:src="@mipmap/icon_out_of_bounds"
            style="@style/setting_icon_sytle"/>

        <TextView
            android:text="@string/RemindOutBoundsSetting"
            style="@style/setting_text_style"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_right"/>

    </LinearLayout>

    <!--寻物模式设置-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:text="@string/findModeSetting"
        android:padding="@dimen/x10"
        android:gravity="center_vertical"
        android:textColor="@color/textTitleColor"/>

    <!--双向防丢-->
    <LinearLayout
        android:id="@+id/ll_SetAntiLost"
        style="@style/setting_ll_style">

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_two_ways_anti_lost"/>

        <TextView
            android:text="@string/Bi_directionalAntiLoss"
            style="@style/setting_text_style"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:text="@string/turnOn"
            style="@style/setting_text_small_style"/>

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_right"/>

    </LinearLayout>

    <!--其他设置-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:text="@string/otherSetting"
        android:padding="@dimen/x10"
        android:gravity="center_vertical"
        android:textColor="@color/textTitleColor"/>

    <!--SIM卡号码设置-->
    <LinearLayout
        android:id="@+id/ll_SetSim"
        style="@style/setting_ll_style">

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_sim_card_number_setting"/>

        <TextView
            android:text="@string/SIMNumberSetting"
            style="@style/setting_text_style"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_right"/>

    </LinearLayout>

    <include layout="@layout/line_gray_margin" />

    <!--修改名称-->
    <LinearLayout
        android:id="@+id/ll_SetName"
        style="@style/setting_ll_style">

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_modify_name"/>

        <TextView
            android:text="@string/changeName"
            style="@style/setting_text_style"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_right"/>

    </LinearLayout>

    <include layout="@layout/line_gray_margin" />
    <!--转移权限-->
    <LinearLayout
        android:id="@+id/ll_SetPermission"
        style="@style/setting_ll_style">

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_transfer_permissions"/>

        <TextView
            android:text="@string/ChangeRights"
            style="@style/setting_text_style"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_right"/>

    </LinearLayout>

    <include layout="@layout/line_gray_margin" />
    <!--解除绑定-->
    <LinearLayout
        android:id="@+id/ll_Unbundling"
        style="@style/setting_ll_style">

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_unbound"/>

        <TextView
            android:text="@string/Unbinding"
            style="@style/setting_text_style"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_right"/>

    </LinearLayout>

</LinearLayout>
