<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundGray"
    tools:context="com.goockr.smsantilost.views.activities.antilost.SetIndexOutActivity">

    <LinearLayout
        android:id="@+id/ll_PhoneSound"
        android:layout_marginTop="@dimen/x10"
        style="@style/setting_ll_style">

        <TextView
            style="@style/index_out_text_style"
            android:text="@string/disconnectedSound"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_PhoneSound"
            style="@style/setting_text_small_style"
            android:layout_height="wrap_content"
            android:text="@string/defaultSound"/>

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_right"/>

    </LinearLayout>

    <include
        layout="@layout/line_gray_margin"/>

    <LinearLayout
        android:id="@+id/ll_SoundTotal"
        style="@style/setting_ll_style">

        <TextView
            android:text="@string/disconnectedTime"
            style="@style/index_out_text_style"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_SoundTotal"
            style="@style/setting_text_small_style"
            android:text="5s"/>

        <ImageView
            style="@style/setting_icon_sytle"
            android:src="@mipmap/icon_right"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:text="@string/disconnectSoundAndTime"
        android:padding="@dimen/x10"
        android:gravity="center_vertical"
        android:textSize="12sp"/>

    <LinearLayout
        style="@style/setting_ll_style">

        <TextView
            android:text="@string/disconnectedTime"
            style="@style/index_out_text_style"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <com.suke.widget.SwitchButton
            android:id="@+id/SwitchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:sb_checked_color="@color/colorPrimary"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40"
        android:text="@string/connectedSound"
        android:padding="@dimen/x10"
        android:gravity="center_vertical"
        android:textSize="12sp"/>

</LinearLayout>
