<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/x10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_corners"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:gravity="center"
            android:id="@+id/systemMap"
            android:text="@string/systemMap"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <include layout="@layout/line_gray_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:gravity="center"
            android:text="@string/aMaps"
            android:visibility="gone"
            android:id="@+id/aMap"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <include layout="@layout/line_gray_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:gravity="center"
            android:text="@string/baiduMap"
            android:visibility="gone"
            android:id="@+id/baiduMap"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:background="@drawable/shape_white_corners"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/x50"
            android:gravity="center"
            android:text="@string/cancel"
            android:id="@+id/tvMapCancel"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>